helm/pig.za261.io/nginxauth-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    app: nginxauth
  name: nginxauth
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginxauth
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginxauth
    spec:
      containers:
      - image: us.gcr.io/mchirico/nginxauth:v0
        imagePullPolicy: Always
        name: nginxauth
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
