helm/pig.za261.io/nginxauth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxauth
  labels:
    app: nginxauth
spec:
  selector:
    app: nginxauth
  ports:
  - port: 443
    targetPort: 8080
    name: nginxauth
  - port: 9100
    targetPort: 9100
    name: node
  type: LoadBalancer
  loadBalancerIP: 35.202.88.179
