helm/pig.za261.io/nginxauth-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginxauth-front
  annotations:
    kubernetes.io/ingress.global-static-ip-name: pigg-ip
  labels:
    app: nginxauth-front
spec:
  backend:
    serviceName: nginxauth-server
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginxauth-server
  labels:
    app: nginxauth
spec:
  type: NodePort
  selector:
    app: nginxauth
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
